[gd_scene load_steps=4 format=3 uid="uid://d4j3lg6cly74v"]

[ext_resource type="Script" uid="uid://c56rsrwixpp15" path="res://Utils/MainMenu/MainMenu.gd" id="1_w7oy2"]
[ext_resource type="PackedScene" uid="uid://bntranin4w8tt" path="res://Utils/Settings/SettingsDialog.tscn" id="2_b76km"]
[ext_resource type="PackedScene" uid="uid://bj4coa65sit82" path="res://Utils/Settings/SettingsKeyReampDialog.tscn" id="3_lbqne"]

[node name="MainMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_w7oy2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FullScreenBlocker"

[node name="Buttons" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "MAIN_MENU_RESUME_GAME"

[node name="ShowInfo" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "MAIN_MENU_TASK_INFO"

[node name="SaveGame" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "MAIN_MENU_SAVE_GAME"

[node name="Space" type="Control" parent="PanelContainer/Buttons"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="StartLevel" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "MAIN_MENU_START_LEVEL"

[node name="LoadSave" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "MAIN_MENU_LOAD_SAVE"

[node name="Space2" type="Control" parent="PanelContainer/Buttons"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Settings" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "MAIN_MENU_SETTINGS"

[node name="Quit" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "MAIN_MENU_QUIT"

[node name="LoadDialog" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 248)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer1" type="HBoxContainer" parent="PanelContainer/LoadDialog"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/LoadDialog/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="NewSaveSlot" type="HBoxContainer" parent="PanelContainer/LoadDialog/HBoxContainer1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NewSaveSlotName" type="LineEdit" parent="PanelContainer/LoadDialog/HBoxContainer1/VBoxContainer/NewSaveSlot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddSaveSlot" type="Button" parent="PanelContainer/LoadDialog/HBoxContainer1/VBoxContainer/NewSaveSlot"]
layout_mode = 2
tooltip_text = "MAIN_MENU_ADD_SAVE_SLOT_TOOLTIP"
text = "MAIN_MENU_ADD_SAVE_SLOT_TEXT"

[node name="LoadDialog_ItemList" type="ItemList" parent="PanelContainer/LoadDialog/HBoxContainer1/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Control" type="Control" parent="PanelContainer/LoadDialog/HBoxContainer1"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="LoadDialog_ItemInfo" type="RichTextLabel" parent="PanelContainer/LoadDialog/HBoxContainer1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
bbcode_enabled = true

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/LoadDialog"]
layout_mode = 2
size_flags_vertical = 8

[node name="Margin1" type="Control" parent="PanelContainer/LoadDialog/Buttons"]
layout_mode = 2

[node name="Cancel" type="Button" parent="PanelContainer/LoadDialog/Buttons"]
layout_mode = 2
text = "MAIN_MENU_CANCEL"

[node name="Fill" type="Control" parent="PanelContainer/LoadDialog/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Load" type="Button" parent="PanelContainer/LoadDialog/Buttons"]
layout_mode = 2
text = "MAIN_MENU_LOAD"

[node name="Save" type="Button" parent="PanelContainer/LoadDialog/Buttons"]
layout_mode = 2
text = "MAIN_MENU_SAVE"

[node name="Margin2" type="Control" parent="PanelContainer/LoadDialog/Buttons"]
layout_mode = 2

[node name="SettingsDialog" parent="PanelContainer" instance=ExtResource("2_b76km")]
unique_name_in_owner = true
layout_mode = 2

[node name="OverwriteConfirmationDialog" type="ConfirmationDialog" parent="PanelContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "MAIN_MENU_SAVE_OVERWRITE_CONFIRM_TITLE"
initial_position = 3
current_screen = 0

[node name="Loading" type="PanelContainer" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"FullScreenBlocker"

[node name="Label" type="Label" parent="PanelContainer/Loading"]
layout_mode = 2
text = "MAIN_MENU_LOADING_PLESE_WAIT"
horizontal_alignment = 1

[node name="SettingsKeyReampDialog" parent="PanelContainer" instance=ExtResource("3_lbqne")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="PanelContainer/Buttons/Resume" to="." method="_hide"]
[connection signal="pressed" from="PanelContainer/Buttons/ShowInfo" to="." method="_on_show_task_info"]
[connection signal="pressed" from="PanelContainer/Buttons/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="PanelContainer/Buttons/StartLevel" to="." method="_on_load_level_pressed"]
[connection signal="pressed" from="PanelContainer/Buttons/LoadSave" to="." method="_on_load_save_pressed"]
[connection signal="pressed" from="PanelContainer/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="text_submitted" from="PanelContainer/LoadDialog/HBoxContainer1/VBoxContainer/NewSaveSlot/NewSaveSlotName" to="." method="_on_add_save_slot_pressed"]
[connection signal="pressed" from="PanelContainer/LoadDialog/HBoxContainer1/VBoxContainer/NewSaveSlot/AddSaveSlot" to="." method="_on_add_save_slot_pressed"]
[connection signal="item_selected" from="PanelContainer/LoadDialog/HBoxContainer1/VBoxContainer/LoadDialog_ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="PanelContainer/LoadDialog/Buttons/Cancel" to="." method="_switch_to_normal"]
[connection signal="pressed" from="PanelContainer/LoadDialog/Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/LoadDialog/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="on_setting_close" from="PanelContainer/SettingsDialog" to="." method="_switch_to_normal"]
[connection signal="on_setting_reset" from="PanelContainer/SettingsDialog" to="." method="_on_settings_pressed"]
[connection signal="confirmed" from="PanelContainer/OverwriteConfirmationDialog" to="." method="_on_overwrite_confirmation_dialog_confirmed"]
